2019-04-04 Jana Mendrok  <jana.mendrok@gmail.com>

	* arts-2-3-1245

	* doc/uguide/atmosphere.tex: Explanatory sentence on interpretation of
	wind directions in 1D case. Upgraded magnetic vector field paragraph to
	its own section.

2019-04-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1244

	* src/workspace.cc: Added information on assumption of implied
	azimuth angle for 1D and 2D. 

2019-04-01  Richard Larsson <larsson@mps.mpg.de>

	* arts-2-3-1243
	
	* controlfiles/artscomponents/*:  All the files were checked, the change was
	on the order of the second to the fourth digits at worst.  Often much less
	than that.  Still because the check was wanted better than sixth digit 
	in most files, the update is required.
	
	* src/absorption.cc,src/linefunctions.cc,src/linemixing.cc:
	* src/m_linemixing.cc, src/test_propmat_partials.cc:  Make use of 
	an external Doppler constant.
	
	* src/constants.cc,h:  Updated most values to be in constants.h as
	constexpr.  I am trying to follow the planned May-update of SI units as
	best as I understand it.  All constants in this new update can be found from
	measurements of two other constants.  In the implementation, I choose
	these two other constants to be the fine structure constant and the
	Rydberg constant.  This follows the Wikipedia article on the subject, which
	in turn follows the NIST recommended CODATA paper from 2016, and
	a working draft of the SI update (with the exact same numbers).  Other
	constants, such as the electron mass, are then computed from these values.
	
	Making this update, ARTS no longer has its own definition of the mol.
	Instead of multiplying the SI constant by 1000, now
	this multiplication has to happen elsewhere.  This is mostly changed to fix
	an internal inconsistency of R != k NA.  To enforce self-consistency
	in several of these units, they are computed as part of constexpr
	(which should mean on compile time if any optimizations are on) instead
	of as pure values.
	